--- a/tools-pyproject.toml
+++ b/tools-pyproject.toml
@@ -28,6 +28,7 @@ ignore = [
     "D211", # blank-line-before-class
     # "D213", # multi-line-summary-second-line
     "D212", # multi-line-summary-first-line
+    "ERA001", # commented-out code
 ]
 
 [tool.ruff.lint.per-file-ignores]
