--- a/ruff-pyproject.toml
+++ b/ruff-pyproject.toml
@@ -5,10 +5,10 @@ line-length = 120
 [tool.ruff.lint]
 select = [ "ALL" ]
 ignore = [
-    # "D203", # incorrect-blank-line-before-class
-    "D211", # blank-line-before-class
-    # "D213", # multi-line-summary-second-line
-    "D212", # multi-line-summary-first-line
+    "D203", # incorrect-blank-line-before-class
+    # "D211", # blank-line-before-class
+    "D213", # multi-line-summary-second-line
+    # "D212", # multi-line-summary-first-line
     "ERA001", # commented-out code
 ]
 
